--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,86 +1,83 @@
 body {
     font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f5f5f5;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 0;
-    background-color: #f4f4f4;
-    padding: 10px;
-    box-sizing: border-box;
 }
-
-.main-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    max-width: 600px;
-}
-
 .container {
-    background: #fff;
+    width: 400px;
     padding: 20px;
+    background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    text-align: center;
-    margin-bottom: 20px;
-    width: 100%;
-    box-sizing: border-box;
 }
-
-.responsive-img {
+picture img {
     width: 100%;
     height: auto;
-    border-radius: 8px;
 }
-
-.submit-btn {
-    background-color: #4CAF50;
+.saldo {
+    background-color: #4caf50;
     color: white;
+    padding: 10px;
+    text-align: center;
+    margin-top: 20px;
+    border-radius: 5px;
+    font-size: 1.5em;
+}
+.content {
+    margin: 20px 0;
+}
+.captcha {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+.btn {
+    display: block;
+    width: 100%;
+    padding: 15px;
+    text-align: center;
     border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 4px;
+    border-radius: 5px;
+    font-size: 1.2em;
     cursor: pointer;
     margin-top: 20px;
 }
-
-.submit-btn1 {
-    background-color: #ff1b1b;
+.btn-green {
+    background-color: #4caf50;
     color: white;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 4px;
-    cursor: pointer;
+}
+.btn-red {
+    background-color: #f44336;
+    color: white;
+}
+.btn:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+.error {
+    color: red;
+    text-align: center;
     margin-top: 20px;
 }
-
-.submit-btn:hover {
-    background-color: #45a049;
+.progresso {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 1.2em;
 }
-
-.submit-btn1:hover {
-    background-color: #ff1b1b;
-}
-
-/* Responsividade */
 @media (max-width: 600px) {
     .container {
-        padding: 15px;
-    }
-
-    .submit-btn {
         width: 100%;
-        padding: 15px;
-        font-size: 18px;
+        padding: 10px;
     }
-    .submit-btn1 {
-        width: 100%;
-        padding: 15px;
-        font-size: 18px;
+    .saldo {
+        font-size: 1.2em;
+    }
+    .btn {
+        font-size: 1em;
+        padding: 10px;
     }
 }
-
-
