--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 .container {
-    width: 400px;
+    max-width: 400px;
+    width: 100%;
     padding: 20px;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -70,7 +71,6 @@ picture img {
 }
 @media (max-width: 600px) {
     .container {
-        width: 100%;
         padding: 10px;
     }
     .saldo {
